# titan-pos

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.context/: PROJECT_CONTEXT.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/cloud-api/: Cargo.toml  Dockerfile  build.rs
apps/cloud-api/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
apps/cloud-api/src/proto/: mod.rs  titan.sync.v1.rs
apps/cloud-api/src/services/: auth_service.rs  config_service.rs  health_service.rs  mod.rs  notification_service.rs  sync_service.rs
apps/desktop/: .eslintrc.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: cart.rs  config.rs  mod.rs  product.rs  sale.rs  sync.rs
apps/desktop/src-tauri/src/state/: cart.rs  config.rs  db.rs  mod.rs  sync.rs
apps/desktop/src/components/: Cart.tsx  Header.tsx  ProductSearch.tsx  ReceiptModal.tsx  TenderModal.tsx  Toast.tsx
apps/desktop/src/machines/: posMachine.ts
apps/desktop/src/styles/: index.css
apps/desktop/src/types/: index.ts
apps/desktop/src/utils/: index.ts
crates/titan-core/: Cargo.toml
crates/titan-core/bindings/: Money.ts  Payment.ts  PaymentMethod.ts  Product.ts  Sale.ts  SaleItem.ts  SaleStatus.ts  SyncOutboxEntry.ts  TaxMode.ts  TaxRate.ts
crates/titan-core/src/: error.rs  lib.rs  money.rs  types.rs  validation.rs
crates/titan-db/: Cargo.toml
crates/titan-db/src/: error.rs  lib.rs  migrations.rs  pool.rs
crates/titan-db/src/repository/: mod.rs  product.rs  sale.rs  sync.rs
crates/titan-sync/: Cargo.toml  build.rs
crates/titan-sync/src/: agent.rs  aggregator.rs  cloud_auth.rs  cloud_uplink.rs  config.rs  discovery.rs  election.rs  error.rs  hub.rs  inbound.rs  lib.rs  outbox.rs  proto.rs  protocol.rs  transport.rs
docs/: CONTRIBUTING.md  PROGRESS.md  QUICK_REFERENCE_CARD.md
docs/architecture/: ARCHITECTURE_DECISIONS.md  ARCHITECTURE_DIAGRAMS.md  CRATE_GUIDE.md  DOCKER_DEPLOYMENT.md  PRE_DEVELOPMENT_QUESTIONNAIRE.md  SYNC_ARCHITECTURE.md  TECHNICAL_SPEC.md
migrations/postgres/: 001_initial_schema.sql  002_pending_downloads.sql  003_seed_data.sql
migrations/sqlite/: 001_initial_schema.sql  002_add_fts.sql  003_sync_tables.sql
proto/: titan_sync.proto
